--- a/user/view/default/session/changePassword.html
+++ b/user/view/default/session/changePassword.html
@@ -1,5 +1,4 @@
-﻿{{include file='common/head2.html'}}
-<script language="javascript">
+﻿<script language="javascript">
 function checkPassword()
 {
 	if(frm.passwd.value==""){
