--- a/vhost/view/default/common/head.html
+++ b/vhost/view/default/common/head.html
@@ -5,4 +5,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- 定义链接样式表 -->
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
+<link rel="stylesheet" rev="stylesheet" href="{{$PSTATIC}}/style/style2.css" type="text/css"/>
 </head>
