--- a/admin/view/default/adminuser/userlist.html
+++ b/admin/view/default/adminuser/userlist.html
@@ -1,10 +1,11 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
+<div id="container">
 <div class="padd2 mar_top">
 <div class="topimg">共计 {{$sum}} 条记录</div>
 </div>
 <div align="center">
-  <div class="tb_wid2">
+  <div class="tb_wid">
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
         <td class='color01 right' bgcolor='#efefef'>用户名</td>
@@ -20,6 +21,7 @@
 	  {{/foreach}}
     </table>
   </div>
+</div>
 </div>
 </body>
 </html>
