--- a/style/style2.css
+++ b/style/style2.css
@@ -59,10 +59,10 @@ margin-bottom:5px;
 line-height:30px;
 }
 .padd{
-padding-left:70px;
+padding-left:7%;
 }
 .padd2{
-padding-left:200px;
+padding-left:24%;
 }
 
 
