--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -27,10 +27,8 @@ function checkPassword()
     </table>
 	</div>
   </form>
-  </div>
 {{if $db_limit}}
-<div><br><br></div>
-<div align="center">
+<div><br></div>
   <form name='frm' action="?c=session&a=changeDbPassword" method="post">
 <div class="head_block tb_wid2">&nbsp;修改数据库存密码</div>
 <div class="block tb_wid2">
