--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -4,7 +4,7 @@
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">用户名：</td>
-        <td class="td_bgc">{{$user.username}}</td>
+        <td class="td_bgc tb_wid2">{{$user.username}}</td>
         </tr>
       <tr>
         <td class="td_bgc right_2">姓名：</td>
