--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -1,6 +1,4 @@
-﻿{{include file='common/head.html'}}
-<body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
-<script language="javascript">
+﻿<script language="javascript">
 function checkPassword()
 {
 	if(frm.passwd.value==""){
@@ -21,7 +19,7 @@ function checkPassword()
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">FTP新密码：</td>
-        <td class="td_bgc right_2"><input type='password' name='passwd' id='passwd' >
+        <td class="td_bgc right_2 tb_wid4"><input type='password' name='passwd' id='passwd' >
          <input type='submit' value='确定'/></td>
        </tr>
     </table>
@@ -35,7 +33,7 @@ function checkPassword()
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">数据库新密码：</td>
-        <td class="td_bgc right_2"><input type='password' name='passwd' id='passwd' >
+        <td class="td_bgc right_2 tb_wid4"><input type='password' name='passwd' id='passwd' >
           <input type='submit' value='确定'/></td>
        </tr>
     </table>
@@ -43,5 +41,4 @@ function checkPassword()
   </form>
   </div>
 {{/if}}
-</body>
 {{include file='common/foot.html'}}
