--- a/admin/view/default/kpanel.html
+++ b/admin/view/default/kpanel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>kangle web 主机管理系统</title>
+<title>{{$title}}</title>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <frameset name="right" rows="64,9,*" cols="*" frameborder="no" border="0" framespacing="0">
