--- a/admin/view/default/common/head.html
+++ b/admin/view/default/common/head.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="utf-8">
 <head>
-<title>导航,kangle web 主机管理面板</title>
+<title>{{$title}}</title>
 <!-- 定义语言编码 -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- 定义链接样式表 -->
