--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -9,15 +9,15 @@
 	  </tr>
 	  <tr>
         <td class="td_bgc right_2">姓名：</td>
-        <td class="td_bgc"> <input name='name' id="name" value='{{$user.name}}' /></td>
+        <td class="td_bgc"> <input name='name' value='{{$user.name}}' /></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">身份证：</td>
-        <td class="td_bgc"><input name='id' id="id" value='{{$user.id}}' /></td>
+        <td class="td_bgc"><input name='id' value='{{$user.id}}' /></td>
 	  </tr>
 	  <tr>
         <td class="td_bgc right_2">电子邮件</td>
-        <td class="td_bgc"><input name='email' id="email" value='{{$user.email}}' /></td>
+        <td class="td_bgc"><input name='email' value='{{$user.email}}' /></td>
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
