--- a/vhost/view/default/domain/add.html
+++ b/vhost/view/default/domain/add.html
@@ -1,25 +1,21 @@
 ﻿<div id="container">
+<div class="padd3 mar_top">
 <div class="topimg">{{if $action=='add'}}增加域名绑定{{else}}修改域名绑定{{/if}}</div>
-  <div id="main" class="wid">
+</div>
   <form name='nodeform' action="?c=domain&a={{$action}}" method="post">
-<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="65%">
-	<tr>
-  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">增加域名绑定</font></td>
-	</tr>
+	<div class="head_block tb_wid2">&nbsp;增加域名绑定</div>
+<div class="block tb_wid2">
+<table id="table_2" cellpadding="0" cellspacing="1">
   <tr>
-    <td>
-<table width="100%" border="0" cellpadding="0" cellspacing="1" id="td5">
-  <tr>
-    <td width="30%" height="25" class="color01 right" id="td4">域名绑定：</td>
-        <td width="423" bgcolor="#fafaf5">
+    <td class="td_bgc right_2">域名绑定：</td>
+        <td class="td_bgc">
           <input type='text' name='domain' id='domain' value="{{$domain.domain}}" onBlur="checkName();"></td>
        </tr>
       <tr>
-        <td id="td4" colspan="2" align="center"><button type="submit">确定</button></td>
+        <td class="td_bgc right_2" colspan="2" align="center"><button type="submit">确定</button></td>
        </tr>
-    </table></td>
-  </tr>
-</table>
+    </table>
+	</div>
   </form>
-  </div>
-</div>
+    </div>
+
