--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -61,8 +61,8 @@ function changeNode(id,templete)
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
 		<td class='color01 right' bgcolor='#efefef'>空间配额(M)</td>
 		<td class='color01 right' bgcolor='#efefef'>数据库配额(M)</td>
-		<td class='color01 right' bgcolor='#efefef'>价格(元/年)</td>
-		
+		<td class='color01 right' bgcolor='#efefef'>价格(元/年)</td>	
+		<td class='color01 right' bgcolor='#efefef'>绑定子目录</td>	
 		<td class='color01 right' bgcolor='#efefef'>模板</td>
 		<td class='color01 right' bgcolor='#efefef'>主机</td>
 		<td class='color01 right' bgcolor='#efefef'>状态</td>
@@ -79,6 +79,7 @@ function changeNode(id,templete)
 		<td class="right">{{$row.web_quota}}</td>
 		<td class="right">{{$row.db_quota}}</td>
 		<td class="right">{{$row.price/100}}</td>
+		<td class="right">{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}</td>
 		<td class="right">{{$row.templete}}</td>
 		<td class="right">
 			<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')"">
