--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -1,27 +1,32 @@
 ﻿<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div align="center">
-  <table class="tb_wid2" align="center" >
-  <tr><td class="topimg mar_top">共计 {{$sum}} 条记录</td></tr>
-  <tr><td>[<a href='?c=domain&a=addForm'>新增域名绑定</a>]</td></tr>
-  </table>
-	<div class="head_block2 tb_wid2">&nbsp;绑定域名列表员</div>
+<table class="tb_wid2" align="center">
+	<tr>
+		<td class="topimg mar_top">共计 {{$sum}} 条记录</td>
+	</tr>
+	<tr>
+		<td>[<a href='?c=domain&a=addForm'>新增域名绑定</a>]</td>
+	</tr>
+</table>
+<div class="head_block2 tb_wid2">&nbsp;绑定域名列表员</div>
 <div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
-      <tr>
-	    <td class="td_bgc right_2">操作</td>
-        <td class="td_bgc right_2">域名</td>
-        <td class="td_bgc right_2">目录</td>
-        </tr>
-	  {{foreach from=$list item=row}}
-      <tr>
-	  <td class="td_bgc right_2">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}" title="删除域名">删除</a>]</td>
-        <td class="td_bgc right_2">{{$row.name}}</td>
-        <td class="td_bgc right_2">{{$row.value}}</td>
-        </tr>
-	  	  {{/foreach}}
-	    </table>
-    <div align="left">
-	</div>
+	<tr>
+		<td class="td_bgc right_2">操作</td>
+		<td class="td_bgc right_2">域名</td>
+		<td class="td_bgc right_2">目录</td>
+	</tr>
+	{{foreach from=$list item=row}}
+	<tr>
+		<td class="td_bgc right_2">[<a
+			href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}"
+			title="删除域名">删除</a>]</td>
+		<td class="td_bgc right_2">{{$row.name}}</td>
+		<td class="td_bgc right_2">{{$row.value}}</td>
+	</tr>
+	{{/foreach}}
+</table>
+<div align="left"></div>
 </div>
 </body>
 {{include file='common/foot.html'}}
