--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -1,36 +1,38 @@
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/left.css" type="text/css" media="all" />
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/public.css" type="text/css" media="all" />
 <table cellpadding="0" cellspacing="0" class="lefttd">
-<tr><td width="154">
-<script type="text/javascript">
-function SwitchMenu(obj,sty)
-{
-}
-</script>
-<div id="masterdiv">
-	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu" >
-	  帐户管理
-	</h1>
-	<ul class="submenu" id="sub5" >
-		<li><a href="?c=user&a=index" target="{{$target}}">帐户信息</a></li>
-		<li><a href="?c=user&a=changeForm" target="{{$target}}">修改资料</a></li>
-		<li><a href="?c=session&a=changePasswordForm" target="{{$target}}">修改密码</a></li>
-	    <li><a href="?c=session&a=logout" target="_top">退出</a></li>
-	</ul>
-	<!-- 
-	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
-	<ul class="submenu" id="sub4" >
-		<li><a href="">充值金额</a></li>	
-		<li><a href="?c=nodes&a=addNode" >消费记录</a></li>
-		<li><a href="?c=nodes&a=addNode" >充值记录</a></li>
-	    </ul>
-	-->
-	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
-	    我的产品	 
-	</h1>
-	<ul class="submenu" id="sub6" >
-	    <li><a href="?c=vhostproduct&a=show" target="{{$target}}">我的虚拟主机</a></li>
-		</ul>
-</div>
-</td></tr>
+	<tr>
+		<td width="154">
+		<script type="text/javascript">
+		function SwitchMenu(obj,sty)
+		{
+		}
+		</script>
+		<div id="masterdiv">
+			<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu" >
+			  帐户管理
+			</h1>
+			<ul class="submenu" id="sub5" >
+				<li><a href="?c=user&a=index" target="{{$target}}">帐户信息</a></li>
+				<li><a href="?c=user&a=changeForm" target="{{$target}}">修改资料</a></li>
+				<li><a href="?c=session&a=changePasswordForm" target="{{$target}}">修改密码</a></li>
+				<li><a href="?c=session&a=logout" target="_top">退出</a></li>
+			</ul>
+			<!-- 
+			<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
+			<ul class="submenu" id="sub4" >
+				<li><a href="">充值金额</a></li>	
+				<li><a href="?c=nodes&a=addNode" >消费记录</a></li>
+				<li><a href="?c=nodes&a=addNode" >充值记录</a></li>
+				</ul>
+			-->
+			<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu">	
+				我的产品	 
+			</h1>
+			<ul class="submenu" id="sub6" >
+				<li><a href="?c=vhostproduct&a=show" target="{{$target}}">我的虚拟主机</a></li>
+				</ul>
+		</div>
+		</td>
+	</tr>
 </table>
