--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -1,29 +1,28 @@
 <form action="?c=user&a=change" method="post">
 <div align="center">
-<div class="head_block tb_wid">&nbsp;修改资料</div>
-<div class="block tb_wid">
-<table id="table_2" cellpadding="0" cellspacing="1">
-	  <tr>
-        <td class="td_bgc right_2">用户名：</td>
-        <td class="td_bgc">{{$user.username}}</td>
-	  </tr>
-	  <tr>
-        <td class="td_bgc right_2">姓名：</td>
-        <td class="td_bgc"> <input name='name' value='{{$user.name}}' /></td>
-        </tr>
-	  <tr>
-        <td class="td_bgc right_2">身份证：</td>
-        <td class="td_bgc"><input name='id' value='{{$user.id}}' /></td>
-	  </tr>
-	  <tr>
-        <td class="td_bgc right_2">电子邮件</td>
-        <td class="td_bgc"><input name='email' value='{{$user.email}}' /></td>
-        </tr>
-	    <tr>
-	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="修改"></td>
-        </tr>
-    </table>
+	<div class="head_block tb_wid">&nbsp;修改资料</div>
+	<div class="block tb_wid">
+		<table id="table_2" cellpadding="0" cellspacing="1">
+			<tr>
+				<td class="td_bgc right_2">用户名：</td>
+				<td class="td_bgc">{{$user.username}}</td>
+			</tr>
+			<tr>
+				<td class="td_bgc right_2">姓名：</td>
+				<td class="td_bgc"> <input name='name' value='{{$user.name}}' /></td>
+			</tr>
+			<tr>
+				<td class="td_bgc right_2">身份证：</td>
+				<td class="td_bgc"><input name='id' value='{{$user.id}}' /></td>
+			</tr>
+			<tr>
+				<td class="td_bgc right_2">电子邮件</td>
+				<td class="td_bgc"><input name='email' value='{{$user.email}}' /></td>
+			</tr>
+			<tr>
+				<td class="td_bgc td_hg" colspan="2" align="center"><input type="submit" value="修改"></td>
+			</tr>
+		</table>
 	</div>
-	</div>
+</div>
  </form>
