cann't show bind name/dir

--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -80,8 +80,8 @@
         <td class="td_bgc">目录</td></tr>
 		 {{foreach from=$list item=row}}
       <tr>
-        <td class="td_bgc">{{$row.domain}}</td>
-        <td class="td_bgc">{{$row.dir}}</td></tr>
+        <td class="td_bgc">{{$row.name}}</td>
+        <td class="td_bgc">{{$row.value}}</td></tr>
 		  {{/foreach}}
           {{/if}}
      </table>
