--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -76,12 +76,12 @@
 <div class="block tb_wid2">
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
-        <td class="td_bgc">域名</td>
-        <td class="td_bgc">目录</td></tr>
+        <td class="td_bgc right_2">域名</td>
+        <td class="td_bgc right_2">目录</td></tr>
 		 {{foreach from=$list item=row}}
       <tr>
-        <td class="td_bgc">{{$row.name}}</td>
-        <td class="td_bgc">{{$row.value}}</td></tr>
+        <td class="td_bgc right_2 tb_wid">{{$row.name}}</td>
+        <td class="td_bgc right_2">{{$row.value}}</td></tr>
 		  {{/foreach}}
           {{/if}}
      </table>
