--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/left.css" type="text/css" media="all" />
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/public.css" type="text/css" media="all" />
-<table cellpadding="0" cellspacing="0" class="lefttd">
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
+<table width="300" cellpadding="0" cellspacing="0" class="lefttd">
 	<tr>
 		<td width="154">
 		<script type="text/javascript">
@@ -9,7 +9,7 @@
 		}
 		</script>
 		<div id="masterdiv">
-			<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu" >
+			<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu">
 			  帐户管理
 			</h1>
 			<ul class="submenu" id="sub5" >
@@ -31,7 +31,7 @@
 			</h1>
 			<ul class="submenu" id="sub6" >
 				<li><a href="?c=vhostproduct&a=show" target="{{$target}}">我的虚拟主机</a></li>
-				</ul>
+		  </ul>
 		</div>
 		</td>
 	</tr>
