--- a/admin/view/default/common/head.html
+++ b/admin/view/default/common/head.html
@@ -4,6 +4,6 @@
 <!-- 定义语言编码 -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- 定义链接样式表 -->
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/style.css" type="text/css"/>
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
 <link rel="stylesheet" rev="stylesheet" href="{{$PSTATIC}}/style/style2.css" type="text/css"/>
 </head>
