--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -1,8 +1,9 @@
+<body style="overflow-x:hidden; overflow-y:auto;">
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
-<table width="300" cellpadding="0" cellspacing="0" class="lefttd">
+<table cellpadding="0" cellspacing="0" class="lefttd">
 	<tr>
-		<td width="154">
+		<td>
 		<script type="text/javascript">
 		function SwitchMenu(obj,sty)
 		{
@@ -36,3 +37,4 @@
 		</td>
 	</tr>
 </table>
+</body>
