--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -39,6 +39,10 @@
         <td class="td_bgc right_2">产品名称</td>
         <td class="td_bgc">{{$row.product_name}}</td>
 	  </tr>
+	  <tr>
+        <td class="td_bgc right_2">模板</td>
+        <td class="td_bgc">{{$row.templete}}:{{$row.sub_templete}}</td>
+	  </tr>
 	   <tr>
         <td class="td_bgc right_2">所在服务器</td>
         <td class="td_bgc">{{$row.node}}</td>
