--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -9,7 +9,8 @@
   </div>
 {{if $msg}}
 <div align="center">
-<div class="block tb_wid2 mar_top" align="center"><font color=red>{{$msg}}</font></div></div>
+<div class="block tb_wid2 mar_top" align="center"><font color=red>{{$msg}}</font></div>
+</div>
 {{/if}}
   {{if $row}}
   <div align="center">
