--- a/admin/view/default/install/step1.html
+++ b/admin/view/default/install/step1.html
@@ -1,3 +1,7 @@
+{{include file='common/head.html'}}
+<style>
+#header {width:100%; background:#464646; height:35px; color:#FFFFFF; margin-bottom:60px;}
+</style>
 <script language="javascript">
 function check_db()
 {
@@ -5,42 +9,47 @@ function check_db()
 	window.open(url,'','height=100,width=250,resize=no,scrollbars=no,toolsbar=no,top=200,left=200');
 }
 </script>
-欢迎安装kangle虚拟主机管理系统!<br>
-<font color='red'>
-{{$msg}}
-</font>
-<form id="form1" name="form1" method="post" action="?c=install&a=step2">
-  <table width="425" border="1" align="center">
+<div id="header"></div>
+<div align="center">
+{{if $msg}}
+<div class="block tb_wid mar_top" align="center"><font color=red>{{$msg}}</font></div>
+{{/if}}
+<div class="tb_wid head_block" align="center">&nbsp;欢迎安装kangle虚拟主机管理系统!</div>
+<div class="block tb_wid">
+  <table id="table_2" cellpadding="0" cellspacing="1">
+  <form id="form1" name="form1" method="post" action="?c=install&a=step2">
     <tr>
-      <td width="139">数据库地址</td>
-      <td width="270"><input name="db_host" type="text" id="db_host" value="{{$request.db_host}}" /></td>
+      <td class="td_bgc right_2">数据库地址</td>
+      <td class="td_bgc right_2"><input name="db_host" type="text" id="tb_wid3" value="{{$request.db_host}}" /></td>
     </tr>
     <tr>
-      <td>数据库名</td>
-      <td><input name="db_name" type="text" id="db_name" value="{{$request.db_name}}" /></td>
+      <td class="td_bgc right_2">数据库名</td>
+      <td class="td_bgc right_2"><input name="db_name" type="text" id="tb_wid3" value="{{$request.db_name}}" /></td>
     </tr>
     <tr>
-      <td>数据用户名</td>
-      <td><input name="db_user" type="text" id="db_user" value="{{$request.db_user}}" /></td>
+      <td class="td_bgc right_2">数据用户名</td>
+      <td class="td_bgc right_2"><input name="db_user" type="text" id="tb_wid3" value="{{$request.db_user}}" /></td>
     </tr>
     <tr>
-      <td>数据库密码</td>
-      <td><input name="db_passwd" type="password" id="db_passwd" autocomplete='off'/></td>
+      <td class="td_bgc right_2">数据库密码</td>
+      <td class="td_bgc right_2"><input name="db_passwd" type="password" id="tb_wid3" autocomplete='off'/></td>
     </tr>
     <tr>
-      <td>域名</td>
-      <td><input name="domain" type="text" id="domain" value="{{$request.domain}}"/></td>
+      <td class="td_bgc right_2">域名</td>
+      <td class="td_bgc right_2"><input name="domain" type="text" id="tb_wid3" value="{{$request.domain}}"/></td>
     </tr>
     <tr>
-      <td>初始管理员</td>
-      <td><input name="admin_user" type="text" id="admin_user" value="{{$request.admin_user}}"/></td>
+      <td class="td_bgc right_2">初始管理员</td>
+      <td class="td_bgc right_2"><input name="admin_user" type="text" id="tb_wid3" value="{{$request.admin_user}}"/></td>
     </tr>
     <tr>
-      <td>初始管理员密码</td>
-      <td><input name="admin_passwd" type="password" id="admin_passwd" autocomplete='off'/></td>
+      <td class="td_bgc right_2">初始管理员密码</td>
+      <td class="td_bgc right_2"><input name="admin_passwd" type="password" id="tb_wid3" autocomplete='off'/></td>
     </tr>
     <tr>
-      <td colspan="2" align="center"><input type="submit" name="Submit" value="下一步" /></td>
+      <td colspan="2" class="td_bgc right_2 tb_hg" align="center"><input type="submit" name="Submit" value="下一步" /></td>
     </tr>
+	</form>
   </table>
-</form>
+</div>
+{{include file='common/foot.html'}}
