--- a/admin/view/default/install/step2.html
+++ b/admin/view/default/install/step2.html
@@ -1,1 +1,5 @@
-安装成功！请点<a href='?c=session&a=loginForm'>这里登录</a>，进行管理。
+{{include file='common/head.html'}}
+<div align="center">
+  <div class="block tb_wid mar_top td_hg2"><font color="red">kangle虚拟主机管理系统安装成功！请点<a href='?c=session&a=loginForm'>这里登录</a>，进行管理。</font></div>
+<div>
+{{include file='common/foot.html'}}
