--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -6,7 +6,7 @@
 <table id="table_2" border="0" cellpadding="0" cellspacing="1">
 	  <tr>
         <td class="td_bgc right_2">用户名:</td>
-        <td class="td_bgc">{{$role.admin}}</td>
+        <td class="td_bgc tb_wid2">{{$role.admin}}</td>
 	  </tr>
 	  <tr>
         <td class="td_bgc right_2">最后登录时间:</td>
