--- a/vhost/view/default/domain/add.html
+++ b/vhost/view/default/domain/add.html
@@ -9,7 +9,7 @@ $action=='add'}}增加域名绑定{{else}}修改域名绑定{{/if}}</div>
 <table id="table_2" cellpadding="0" cellspacing="1">
 	<tr>
 		<td class="td_bgc right_2">域名</td>
-		<td class="td_bgc padd2"><input type='text' name='domain' id='domain'
+		<td class="td_bgc"><input type='text' name='domain' id='domain'
 			value="{{$domain.domain}}"></td>
 	</tr>
 	{{if $subdir_flag}}
