--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -73,10 +73,10 @@ function checkAllNode()
         <td bgcolor='#efefef' class='color01 right'>名称</td>
         <td bgcolor='#efefef' class='color01 right'>主机状态</td>
 		<td bgcolor='#efefef' class='color01 right'>主机</td>
-		<td  bgcolor='#efefef' class='color01 right'>端口</td>
-		<td bgcolor='#efefef' class='color01 right'>用户名</td>
+		<td  bgcolor='#efefef' class='color01 right'>管理端口</td>
+		<td bgcolor='#efefef' class='color01 right'>管理用户名</td>
 		<td  bgcolor='#efefef' class='color01 right'>数据库用户名</td>
-		<td  bgcolor='#efefef' class='color01 right'>物理盘</td>
+		<td  bgcolor='#efefef' class='color01 right'>物理盘/挂载点</td>
       </tr>
 	  {{foreach from=$list item=row}}
       <tr>
