--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -28,7 +28,7 @@
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="增加"></td>
+		<input type="submit" value="确定"></td>
         </tr>
     </table>
 	</div>
