--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -35,7 +35,7 @@ function checkPassword()
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
-		<input type="submit" value="增加">
+		<input type="submit" value="确定">
 		</td>
         </tr>
     </table>
