install.php modify

--- a/admin/view/default/install/step1.html
+++ b/admin/view/default/install/step1.html
@@ -24,7 +24,7 @@ function check_db()
       <td class="td_bgc right_2"><input name="db_name" type="text" id="tb_wid3" value="{{$request.db_name}}" /></td>
     </tr>
     <tr>
-      <td class="td_bgc right_2">数据用户名</td>
+      <td class="td_bgc right_2">数据库用户名</td>
       <td class="td_bgc right_2"><input name="db_user" type="text" id="tb_wid3" value="{{$request.db_user}}" /></td>
     </tr>
     <tr>
