--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -7,7 +7,7 @@
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">名字：</td>
-        <td class="td_bgc">
+        <td class="td_bgc right_2">
            <input type='text' name='name' id='tb_wid3' value="{{$node.name}}" onBlur="checkName();"
         {{if $action=="edit"}}
         	readonly
@@ -17,37 +17,37 @@
         </tr>
       <tr>
         <td class="td_bgc right_2">主机：</td>
-        <td class="td_bgc"><input name="host" type="text" id='tb_wid3' value="{{$node.host}}">
+        <td class="td_bgc right_2"><input name="host" type="text" id='tb_wid3' value="{{$node.host}}">
 		      <font color=red>*必填</font></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">管理端口：</td>
-        <td class="td_bgc"><input name="port" id='tb_wid3' value="{{$node.port}}" type="text">
+        <td class="td_bgc right_2"><input name="port" id='tb_wid3' value="{{$node.port}}" type="text">
 			   <font color=red>*必填(如:3311)</font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">管理用户名：</td>
-        <td class="td_bgc"><input name="user" type="text" id='tb_wid3' value="{{$node.user}}">
+        <td class="td_bgc right_2"><input name="user" type="text" id='tb_wid3' value="{{$node.user}}">
 				   <font color=red>*必填</font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">管理密码：</td>
-        <td class="td_bgc"><input name="passwd" type="text" id='tb_wid3' value="{{$node.passwd}}">
+        <td class="td_bgc right_2"><input name="passwd" type="text" id='tb_wid3' value="{{$node.passwd}}">
             <font color=red>*必填</font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">数据库管理账号：</td>
-        <td class="td_bgc"><input name="db_user" type="text" id='tb_wid3' value="{{$node.db_user}}">
+        <td class="td_bgc right_2"><input name="db_user" type="text" id='tb_wid3' value="{{$node.db_user}}">
             </td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">数据库管理密码：</td>
-        <td class="td_bgc"><input name="db_passwd" type="text" id='tb_wid3' value="{{$node.db_passwd}}">
+        <td class="td_bgc right_2"><input name="db_passwd" type="text" id='tb_wid3' value="{{$node.db_passwd}}">
            </td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">物理盘/挂载点：</td>
-        <td class="td_bgc"><input name="dev" type="text" id='tb_wid3' value="{{$node.dev}}">
+        <td class="td_bgc right_2"><input name="dev" type="text" id='tb_wid3' value="{{$node.dev}}">
             <font color=red>*必填(windows写c:,d:等，unix写/home等)</font></td>
         </tr>
 	    <tr>
