--- a/user/view/default/public/msg.html
+++ b/user/view/default/public/msg.html
@@ -1,4 +1,5 @@
-
-<div id="msg" align="center">
-{{$msg}}
+<div align="center"><br />
+<div class="block tb_wid mar_top" align="center"> 
+ <font color='red'>{{$msg}}</font>
+</div>
 </div>
