--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -5,19 +5,19 @@
 		<table id="table_2" cellpadding="0" cellspacing="1">
 			<tr>
 				<td class="td_bgc right_2">用户名：</td>
-				<td class="td_bgc">{{$user.username}}</td>
+				<td class="td_bgc tb_wid2 right_2">{{$user.username}}</td>
 			</tr>
 			<tr>
 				<td class="td_bgc right_2">姓名：</td>
-				<td class="td_bgc"> <input name='name' value='{{$user.name}}' /></td>
+				<td class="td_bgc right_2"> <input name='name' value='{{$user.name}}' /></td>
 			</tr>
 			<tr>
 				<td class="td_bgc right_2">身份证：</td>
-				<td class="td_bgc"><input name='id' value='{{$user.id}}' /></td>
+				<td class="td_bgc right_2"><input name='id' value='{{$user.id}}' /></td>
 			</tr>
 			<tr>
 				<td class="td_bgc right_2">电子邮件</td>
-				<td class="td_bgc"><input name='email' value='{{$user.email}}' /></td>
+				<td class="td_bgc right_2"><input name='email' value='{{$user.email}}' /></td>
 			</tr>
 			<tr>
 				<td class="td_bgc td_hg" colspan="2" align="center"><input type="submit" value="修改"></td>
