--- a/vhost/view/default/msg.html
+++ b/vhost/view/default/msg.html
@@ -1,7 +1,9 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="msg" align="center">
-{{$msg}}
+<div align="center"><br />
+<div class="block tb_wid2 mar_top" align="center"> 
+ <font color='red'>{{$msg}}</font>
+</div>
 </div>
 </body>
 {{include file='common/foot.html'}}
