--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -15,16 +15,16 @@
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">用户：</td>
-        <td class="td_bgc">
+        <td class="td_bgc right_2">
           <input type='text' name='username' id='tb_wid3' value="" /></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">密码：</td>
-        <td class="td_bgc"><input type='password' name='passwd' id='tb_wid3' value=""/></td>
+        <td class="td_bgc right_2"><input type='password' name='passwd' id='tb_wid3' value=""/></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">确认密码：</td>
-        <td class="td_bgc"><input type='password' name='passwd2' id='tb_wid3' value=""/></td>
+        <td class="td_bgc right_2"><input type='password' name='passwd2' id='tb_wid3' value=""/></td>
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
