--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -39,29 +39,29 @@ function check_register()
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">用户：</td>
-        <td class="td_bgc">
+        <td class="td_bgc right_2 tb_wid4">
          <input name='username' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span>
            <input type="button" name="Submit" id="tb_wid3" value="检测用户名" onClick="check_user()"></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">密码：</td>
-        <td class="td_bgc"><input name='passwd' type='password' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span></td>
+        <td class="td_bgc right_2"><input name='passwd' type='password' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span></td>
         </tr>
       <tr>
         <td class="td_bgc right_2">确认密码：</td>
-        <td class="td_bgc"><input name='passwd2' type='password' id="tb_wid3"  value="" size="16"/><span class="color01 right">*</span></td>
+        <td class="td_bgc right_2"><input name='passwd2' type='password' id="tb_wid3"  value="" size="16"/><span class="color01 right">*</span></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">电子邮件:</td>
-        <td class="td_bgc"><input name='email' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span></td>
+        <td class="td_bgc right_2"><input name='email' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">真实姓名:</td>
-        <td class="td_bgc"><input name='name' type='text' id="tb_wid3"  value="" size="16"/></td>
+        <td class="td_bgc right_2"><input name='name' type='text' id="tb_wid3"  value="" size="16"/></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">身份证:</td>
-        <td class="td_bgc"><input type='text' name='id' id="tb_wid3" value="" /></td>
+        <td class="td_bgc right_2"><input type='text' name='id' id="tb_wid3" value="" /></td>
         </tr>
 	  <tr>
          <td class="td_bgc td_hg" colspan="2" align="center"><input name="agree" type="checkbox" value="1">
