--- a/user/view/default/session/changePassword.html
+++ b/user/view/default/session/changePassword.html
@@ -18,16 +18,16 @@ function checkPassword()
 		<div class="block tb_wid">
 			<table id="table_2" cellpadding="0" cellspacing="1">
 				<tr>
-					<td class="td_bgc right_2">旧密码：</td>
-					<td class="td_bgc"><input type='password' name='oldpasswd' ></td>
+					<td class="td_bgc right_2">原密码：</td>
+					<td class="td_bgc right_2"><input type='password' name='oldpasswd' ></td>
 				</tr>
 				<tr>
 					<td class="td_bgc right_2">新密码：</td>
-					<td class="td_bgc"><input type='password' name='passwd' ></td>
+					<td class="td_bgc right_2"><input type='password' name='passwd' ></td>
 				</tr>
 				<tr>
 					<td class="td_bgc right_2">确认新密码：</td>
-					<td class="td_bgc"><input type='password' name='passwd2' ></td>
+					<td class="td_bgc right_2"><input type='password' name='passwd2' ></td>
 				</tr>
 				<tr>
 					<td class="td_bgc td_hg" colspan="2" align="center"><input type="button" onClick="checkPassword()" value="确定"></td>
