--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -4,23 +4,23 @@
 <table id="table_2" cellpadding="0" cellspacing="1">
       <tr>
         <td class="td_bgc right_2">用户名：</td>
-        <td class="td_bgc tb_wid2">{{$user.username}}</td>
+        <td class="td_bgc tb_wid2 right_2">{{$user.username}}</td>
         </tr>
       <tr>
         <td class="td_bgc right_2">姓名：</td>
-        <td class="td_bgc">{{$user.name}}</td>
+        <td class="td_bgc right_2">{{$user.name}}</td>
       </tr>
       <tr>
         <td class="td_bgc right_2">身份证：</td>
-        <td class="td_bgc">{{$user.id}}</td>
+        <td class="td_bgc right_2">{{$user.id}}</td>
       </tr>
 	  <tr>
         <td class="td_bgc right_2">电子邮件</td>
-        <td class="td_bgc">{{$user.email}}</td>
+        <td class="td_bgc right_2">{{$user.email}}</td>
 	  </tr>
 	  <tr>
         <td class="td_bgc right_2">账户余额(元)</td>
-        <td class="td_bgc"> {{$user.money/100}}</td>
+        <td class="td_bgc right_2"> {{$user.money/100}}</td>
         </tr>
     </table>
 	</div>
