--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -5,41 +5,41 @@
 <table id="table_2" cellpadding="0" cellspacing="1">
   <tr>
    <td class="td_bgc right_2">用户名</td>
-    <td class="td_bgc">{{$user.name}}</td>
+    <td class="td_bgc right_2">{{$user.name}}</td>
   </tr>
   <tr>
     <td class="td_bgc right_2">服务器</td>
-    <td class="td_bgc">名称: {{$user.node}} , 地址: {{$node_host}}</td>
+    <td class="td_bgc right_2">名称: {{$user.node}} , 地址: {{$node_host}}</td>
   </tr>
   <tr>
     <td class="td_bgc right_2">产品名称</td>
-    <td class="td_bgc">{{$user.product_name}}</td>
+    <td class="td_bgc right_2">{{$user.product_name}}</td>
   </tr>
   <tr>
     <td class="td_bgc right_2">创建时间</td>
-    <td class="td_bgc">{{$user.create_time}}</td>
+    <td class="td_bgc right_2">{{$user.create_time}}</td>
   </tr>
   <tr>
     <td class="td_bgc right_2">到期时间</td>
-    <td class="td_bgc">{{$user.expire_time}}</td>
+    <td class="td_bgc right_2">{{$user.expire_time}}</td>
   </tr>
    <tr>
     <td class="td_bgc right_2">空间配额</td>
-    <td class="td_bgc">总大小:{{$quota.web_limit}}M/已使用:{{$quota.web_used}}M</td>
+    <td class="td_bgc right_2">总大小:{{$quota.web_limit}}M/已使用:{{$quota.web_used}}M</td>
   </tr>
   {{if $quota.db_limit}}
     <tr>
     <td class="td_bgc right_2">数据库配额</td>
-    <td class="td_bgc">总大小:{{$quota.db_limit}}M/已使用:{{$quota.db_used}}M</td>
+    <td class="td_bgc right_2">总大小:{{$quota.db_limit}}M/已使用:{{$quota.db_used}}M</td>
   </tr>
    <tr>
     <td class="td_bgc right_2">数据库信息</td>
-    <td class="td_bgc">用户名: a{{$user.uid}} , 数据库名: a{{$user.uid}}</td>
+    <td class="td_bgc right_2">用户名: a{{$user.uid}} , 数据库名: a{{$user.uid}}</td>
     </tr>
   {{/if}}
   <tr>
     <td class="td_bgc right_2">状态</td>
-    <td class="td_bgc">{{$user.status}}</td>
+    <td class="td_bgc right_2">{{$user.status}}</td>
   </tr>
 {{if count($subtempletes)>1}}
 <form name='frm' action='?c=index&a=changeSubtemplete' method='post'>
