--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -1,11 +1,36 @@
+<script language='javascript' src='{{$PSTATIC}}/style/common.js'>
+</script>
 <script language="javascript">
 function show(url) 
 { 
 	window.open(url,'','height=100,width=250,resize=no,scrollbars=no,toolsbar=no,top=200,left=200');
 }
+function checkUserResult()
+{
+	if (xmlhttp.readyState==4) {
+		var ret = 0;
+		var msg = '';
+		try{
+			if(xmlhttp.status == 200){		
+				var dataArray = xmlhttp.responseXML.getElementsByTagName('result');
+				ret = dataArray[0].getAttribute('ret');
+				msg = dataArray[0].getAttribute('msg');
+				if(ret=='1'){
+					msg = "用户名可用";
+				}
+				xxkf_obj('check_result').innerHTML = msg;
+			}
+		}catch(e){}
+	}
+}
 function check_user()
 {
-	show('?c=public&a=checkUser&username='+document.reg.username.value);
+	var url = '?c=public&a=ajaxCheckUser&username=' + document.reg.username.value;
+	xxkf_obj('check_result').innerHTML="<img src='{{$PSTATIC}}/style/busy.gif'/>";
+	xmlhttp = create_xmlhttp();	
+	xmlhttp.open("GET",url,true);
+	xmlhttp.onreadystatechange=checkUserResult;
+	xmlhttp.send(null);
 }
 function check_register()
 {
@@ -40,8 +65,11 @@ function check_register()
       <tr>
         <td class="td_bgc right_2">用户：</td>
         <td class="td_bgc right_2 tb_wid4">
-         <input name='username' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span>
-           <input type="button" name="Submit" id="tb_wid3" value="检测用户名" onClick="check_user()"></td>
+        <table width='100%' border='0'>
+        <tr><td>
+         <input name='username' type='text' id="tb_wid3" value="" size="16" onblur="check_user()"/><span class="color01 right">*</span>
+         </td><td><div id='check_result'>asdfasdfasdf</div></td></tr></table>
+         </td>
         </tr>
       <tr>
         <td class="td_bgc right_2">密码：</td>
