--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -65,23 +65,23 @@ function check_register()
       <tr>
         <td class="td_bgc right_2">用户：</td>
         <td class="td_bgc right_2 tb_wid4">
-        <table width='100%' border='0'>
+        <table width='100%' border='0' cellpadding="0" cellspacing="0">
         <tr><td>
-         <input name='username' type='text' id="tb_wid3" value="" size="16" onblur="check_user()"/><span class="color01 right">*</span>
-         </td><td><div id='check_result'>asdfasdfasdf</div></td></tr></table>
+         <input name='username' type='text' id="tb_wid3" value="" size="16" onblur="check_user()"/><span class="color01 right"><font color="red">*</font></span>
+         </td><td><div id='check_result'></div></td></tr></table>
          </td>
         </tr>
       <tr>
         <td class="td_bgc right_2">密码：</td>
-        <td class="td_bgc right_2"><input name='passwd' type='password' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span></td>
-        </tr>
+        <td class="td_bgc right_2"><input name='passwd' type='password' id="tb_wid3" value="" size="16"/><span class="color01 right"><font color="red">*</span></font>        </td>
+      </tr>
       <tr>
         <td class="td_bgc right_2">确认密码：</td>
-        <td class="td_bgc right_2"><input name='passwd2' type='password' id="tb_wid3"  value="" size="16"/><span class="color01 right">*</span></td>
+        <td class="td_bgc right_2"><input name='passwd2' type='password' id="tb_wid3"  value="" size="16"/><span class="color01 right"><font color="red">*</span></font>        </td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">电子邮件:</td>
-        <td class="td_bgc right_2"><input name='email' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right">*</span></td>
+        <td class="td_bgc right_2"><input name='email' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right"><font color="red">*</span></font></td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">真实姓名:</td>
