--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -59,7 +59,9 @@ function checkAllNode()
 }
 </script>
 <div id="container">
-{{$msg}}
+<div align="center"><br />
+<div class="block tb_wid mar_top" align="center"><font color='red'>{{$msg}}</font></div>
+</div>
 <div class="padd mar_top">
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
 </div>
