--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -73,15 +73,16 @@ function check_register()
         </tr>
       <tr>
         <td class="td_bgc right_2">密码：</td>
-        <td class="td_bgc right_2"><input name='passwd' type='password' id="tb_wid3" value="" size="16"/><span class="color01 right"><font color="red">*</span></font>        </td>
+        <td class="td_bgc right_2"><input name='passwd' type='password' id="tb_wid3" value="" size="16"/><span class="color01 right"><font color="red">*</font></span>        </td>
       </tr>
       <tr>
         <td class="td_bgc right_2">确认密码：</td>
-        <td class="td_bgc right_2"><input name='passwd2' type='password' id="tb_wid3"  value="" size="16"/><span class="color01 right"><font color="red">*</span></font>        </td>
+        <td class="td_bgc right_2"><input name='passwd2' type='password' id="tb_wid3"  value="" size="16"/><span class="color01 right"><font color="red">*</font></span>        </td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">电子邮件:</td>
-        <td class="td_bgc right_2"><input name='email' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right"><font color="red">*</span></font></td>
+        <td class="td_bgc right_2"><input name='email' type='text' id="tb_wid3" value="" size="16"/><span class="color01 right"><font color="red">*</font></span>
+		</td>
         </tr>
 	  <tr>
         <td class="td_bgc right_2">真实姓名:</td>
