查询主机状态时可以多个同时查！

--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -47,16 +47,17 @@ function SwitchMenu(obj,sty)
 		<li><a href="?c=adminuser&a=add" target='main'>增加管理员</a></li>
 		<li><a href="?c=session&a=logout" target='_top'>退出登录</a></li>
 	</ul>
-	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu"><ol id="p5">用户管理</ol></h1>
-	<ul class="submenu" id="sub5" >
-		<li><a href="?c=user&a=listUser" target='main'>用户列表</a></li>
-		<li><a href="/user/frame.php?c=public&a=registerForm" target='main'>增加用户</a></li>	
-	</ul>
 	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu"><ol id="p4">主机管理</ol></h1>
 	<ul class="submenu" id="sub4" >
 		<li><a href="?c=nodes&a=listNode" target='main'>主机列表</a></li>	
 		<li><a href="?c=nodes&a=addNode" target='main'>增加主机</a></li>
 	</ul>
+	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu"><ol id="p5">用户管理</ol></h1>
+	<ul class="submenu" id="sub5" >
+		<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
+		<li><a href="/user/frame.php?c=public&a=registerForm" target='main'>注册用户</a></li>	
+	</ul>
+
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">
 	  虚拟主机产品
 	</ol>
