--- a/user/view/default/vhostproduct/renew.html
+++ b/user/view/default/vhostproduct/renew.html
@@ -18,21 +18,21 @@ function check_user()
 <table id="table_2" cellpadding="0" cellspacing="1">
   <tr>
         <td class="td_bgc right_2">用户名</td>
-        <td class="td_bgc">{{$name}}</td>
+        <td class="td_bgc right_2">{{$name}}</td>
         </tr>
       <tr>
         <td class="td_bgc right_2">产品名称</td>
-        <td class="td_bgc">{{$product.name}}</td>
+        <td class="td_bgc right_2">{{$product.name}}</td>
         </tr>
     
         <td class="td_bgc right_2">续费时间:</td>
-        <td class="td_bgc"><input type=radio name=month value=12 checked>1年
+        <td class="td_bgc right_2"><input type=radio name=month value=12 checked>1年
 			<input type=radio name=month value=24>2年
 			<input type=radio name=month value=36>3年</td>
 	  </tr>	 
 	  <tr>
         <td class="td_bgc right_2">价格</td>
-        <td class="td_bgc">{{$product.price/100}}元/年</td>
+        <td class="td_bgc right_2">{{$product.price/100}}元/年</td>
         </tr>
 	    <tr>
 	    <td class="td_bgc td_hg" colspan="2" align="center">
